--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/textViewTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnSurface"
+                android:textColor="@color/text_primary_light"
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold"
                 tools:text="Sample Task Title" />
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/description_margin_top"
-                android:textColor="?attr/colorOnSurface"
+                android:textColor="@color/text_primary_light"
                 android:textSize="@dimen/text_size_medium"
                 android:visibility="gone"
                 tools:text="Sample task description here"
@@ -63,13 +63,13 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="@dimen/icon_margin_end"
                     android:src="@drawable/ic_schedule"
-                    app:tint="?attr/colorOnSurface" />
+                    app:tint="@color/text_primary_light" />
 
                 <TextView
                     android:id="@+id/textViewDueDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
+                    android:textColor="@color/text_primary_light"
                     android:textSize="@dimen/text_size_small"
                     tools:text="Due: Tomorrow 3:00 PM" />
 
@@ -94,7 +94,7 @@
             android:contentDescription="@string/more_options"
             android:padding="@dimen/spacing_small"
             android:src="@drawable/ic_more_vert"
-            app:tint="?attr/colorOnSurface" />
+            app:tint="@color/text_primary_light" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
